[gd_scene load_steps=7 format=2]

[ext_resource path="res://Top Down/scenes/Life.tscn" type="PackedScene" id=1]
[ext_resource path="res://Top Down/scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Top Down/sprites/kiryu.png" type="Texture" id=3]
[ext_resource path="res://Top Down/scenes/Armas/Molotov.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 30.8554

[sub_resource type="CircleShape2D" id=2]
radius = 88.8773

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
position = Vector2( 485.075, 340.826 )
z_index = 1
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -0.630005 )
rotation = 1.5708
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="Molotov" parent="Sprite" instance=ExtResource( 4 )]

[node name="Col" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Limite" type="Area2D" parent="."]
position = Vector2( 0.0859375, 0.53409 )
__meta__ = {
"_edit_group_": true
}

[node name="Col" type="CollisionShape2D" parent="Limite"]
modulate = Color( 0.290196, 0, 1, 0.478431 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Timer_Wave" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="CanvasLayer" instance=ExtResource( 1 )]

[connection signal="mouse_entered" from="Limite" to="." method="_on_Limite_mouse_entered"]
[connection signal="mouse_exited" from="Limite" to="." method="_on_Limite_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer_Wave" to="." method="_on_Timer_Wave_timeout"]
